--- a/vivek/pom.xml
+++ b/vivek/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.1.1</version>
+		</dependency>
 
 
 	</dependencies>
