listners with testNg added

--- a/vivek/pom.xml
+++ b/vivek/pom.xml
@@ -50,6 +50,54 @@
 
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>Smoke</id>
+			<!-- to run through cmd command : mvn test -PSmoke -->
+			
+			<build>
+				<pluginManagement>
+					<plugins>
+
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.5</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testng_smoke.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+
+		<profile>
+			<id>Regression</id>
+			<!-- to run through cmd command : mvn test -PRegression -->
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.2.5</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testng.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+	</profiles>
+
 
 	<build>
 		<pluginManagement>
